--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "SpotGPT",
   "short_name": "SpotGPT",
   "description": "A Spotify-like music player powered by GPT.",
-  "start_url": ".",
+  "start_url": "/clone-spot/",
   "display": "standalone",
   "background_color": "#121212",
   "theme_color": "#1db954",
@@ -10,21 +10,15 @@
   "scope": ".",
   "icons": [
     {
-      "src": "icons/icon-192x192.png",
+      "src": "spot_clone/images1.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512x512.png",
+      "src": "spot_clone/images.png ",
       "sizes": "512x512",
       "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512x512-maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
+    } 
   ],
   "prefer_related_applications": false,
   "id": "/"
